--- a/biz.webgate.notes.mailsignaturemanager/Forms/Portal.form
+++ b/biz.webgate.notes.mailsignaturemanager/Forms/Portal.form
@@ -1,14 +1,15 @@
 <?xml version='1.0' encoding='utf-8'?>
 <note class='form' xmlns='http://www.lotus.com/dxl' version='9.0' replicaid='C1257C1E002C398C'>
-<noteinfo noteid='2a6' unid='AEE20BF9F9E7772BC12577E3006C2117' sequence='124'>
+<noteinfo noteid='2a6' unid='AEE20BF9F9E7772BC12577E3006C2117' sequence='130'>
 <created><datetime>20101122T204103,59+01</datetime></created>
-<modified><datetime>20131109T090305,93+01</datetime></modified>
-<revised><datetime dst='true'>20120815T160140,89+02</datetime></revised>
-<lastaccessed><datetime>20131109T090305,93+01</datetime></lastaccessed>
+<modified><datetime>20131109T095355,77+01</datetime></modified>
+<revised><datetime>20131109T095355,76+01</datetime></revised>
+<lastaccessed><datetime>20131109T095355,77+01</datetime></lastaccessed>
 <addedtofile><datetime>20131109T090305,93+01</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=Marco Baumann/O=WGC/C=CH</name><name>CN=lpiic05p7/O=iic</name><name
->CN=Marco Baumann/O=WGC/C=CH</name><name>CN=WGHub01/O=WGC/C=CH</name></updatedby>
-<wassignedby><name>CN=WGHub01/O=WGC/C=CH</name></wassignedby>
+>CN=Marco Baumann/O=WGC/C=CH</name><name>CN=WGHub01/O=WGC/C=CH</name><name
+>CN=Christian Guedemann/O=WGC/C=CH</name></updatedby>
+<wassignedby><name>CN=Christian Guedemann/O=WGC/C=CH</name></wassignedby>
 <item name='$$fdShow' summary='false' sign='true'><text>'++LotusScript Development Environment:2:5:(Options):0:66
 
 '++LotusScript Development Environment:2:5:(Forward):0:1
@@ -436,7 +437,6 @@ RQBUAEUAAAAAAP//CgBJAE4ASQBUAEkAQQBMAEkAWgBFAAAAAAD//wkAVABFAFIATQBJAE4AQQBU
 AEUAAAD//wYATwBCAEoARQBDAFQAAAAAAP//AAAAAAAABQAIAAAAAADlASJIBAAHAAAAAAAdAAAC
 AAAACgAAAA==
 </rawitemdata></item>
-<item name='$$ScriptName' summary='false' sign='true'><text>fmPortal</text></item>
 <item name='$$FormScript' summary='false' sign='true'><text>'++LotusScript Development Environment:2:5:(Options):0:66
 
 '++LotusScript Development Environment:2:5:(Forward):0:1
@@ -455,36 +455,6 @@ End Sub
 Sub Queryclose(Source As Notesuidocument, Continue As Variant)
 	
 End Sub<break/></text></item>
-<item name='$$$FormScript_O' sign='true'>
-<rawitemdata type='14'>
-AQAAAkxTT0IDABQIZW4AAAQACQAlAAQAAAAoAkwBAAAAAAAArAC4AAAAAAAwAMAAJABEAP//AABg
-AAAAAAAAAAIAAAAEAFgBAAAAAAAAAAAAAAAAAAAAAAAAAABYAVgBAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAABAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAEAAAC4ALgAuAC4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAEABQBMb3R1cyBQcm9kdWN0AAAAVjAuMAAAAAAAAAAAAAAAAAAA
-AAAEAAAAJQAAAAAAAAAoAgAATAEAAAAAAAAAAAAAAQAAAAAAAAABAAAAAAAAAAEAAAAAAAAAAAAA
-AAUAAABXMzJJJQMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAwBQAQAAAADcAA8AJAAkACQARgBPAFIATQBTAEMAUgBJAFAAVABfAE8AAAB4AAMATgBFAFcA
-AACMAAYARABFAEwARQBUAEUAAAAAAKgACgBJAE4ASQBUAEkAQQBMAEkAWgBFAAAAAAD//wkAVABF
-AFIATQBJAE4AQQBUAEUAAAAcAQYATwBCAEoARQBDAFQAAAAAAJQAAAAAAAAA//8GAFMATwBVAFIA
-QwBFAAAAAAD4AAgAQwBPAE4AVABJAE4AVQBFAAAAAAAwAQoAQgBJAE4ARABFAFYARQBOAFQAUwAA
-AAAA//8LAE8AQgBKAEUAQwBUAE4AQQBNAEUAXwAAAP//DwBOAE8AVABFAFMAVQBJAEQATwBDAFUA
-TQBFAE4AVAAAAP//BgAlAEwAUwBYAFUASQAAAAAA//8KAFEAVQBFAFIAWQBDAEwATwBTAEUAAAAA
-AAUALAIAAAAACSpkXQgAAABYAQAAxAAAAAAAAAACAAAAnABIAQAAAAAAAAAAAAAAAAAAAACcAJwA
-AAAAAAAAAAAAAAAAAAAAAAAAAABIAUgBAAAAAAAAAAABAAAAAgAAAAMAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAwABAEgB
-AADgAAYIAAAAABoAAAAgAf//AAAAABAAAAAAAAAA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEFRMp7S5pEL9dAN0BEYa3
-AAAAAAAAAAAAAAAAAAAAAGQAAAAAAAAAAAAAAAAAAAACAKwAAAAQAgAAAAAKAAEA//8AAAMAIAAA
-AAAAmAAJAgAAuAAIAAAAAAAAADQBAAAAAAAAAgAAAPABAAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAIAAgAAAAAAAAAA8AHwAQAAAAAAAAAAAgAAAAAAAAAhAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMAAQAAAgAA
-mAAJAgAAuAADAAEAAAAAAKwAAAABAAAAEwAAADQBAADMAAAAAQAAAAEAAAAAAAAABAApAAAAAAAd
-AAAaCwBbSAFJnADKuACmGgwAR0gBy8wAAABYARoNAB0aEgAdAgAAABEAGAAAAAAA//8BAAMAAwAA
-AAYAxAAIADQBDwAKAAAA2Q==
-</rawitemdata></item>
 <item name='fdPortal' placeholder='true'>
 <rawitemdata type='0'>
 </rawitemdata></item>
@@ -499,6 +469,11 @@ AAYAxAAIADQBDwAKAAAA2Q==
 </rawitemdata></item>
 <item name='$FIELDS'><textlist><text>SaveOptions</text><text>fdSchema</text><text
 >fdSchemaList</text><text>fdPortal</text></textlist></item>
+<item name='$CIAOOwner' sign='true'><text>CN=Peter Luder/O=WGC/C=CH</text></item>
+<item name='$CIAOTime' sign='true'><datetime dst='true'>20110831T111326,05+02</datetime></item>
+<item name='$CIAOCheckOutTime' sign='true'><datetime dst='true'>20120815T113701,06+02</datetime></item>
+<item name='$CIAOCheckOutComment' sign='true'><text>Design-Refresh von Version Legic</text></item>
+<item name='$$ScriptName' summary='false' sign='true'><text>fmPortal</text></item>
 <item name='$Body' sign='true'>
 <rawitemdata type='1'>
 gQKC/1oAAQAAAAAAAAAAAKAFAACgBQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
@@ -797,8 +772,34 @@ AACF/4X/CAABAAII0ggBAP8AAADeBgAAhf+BAoMEJgC8BgUAJgDdBgAAhf+F/xkAAQACCGVuZCBo
 aWRkZW4gZmllbGRzANIIAQD/AAAA3gYAAIX/rgLeBgAArgDdBgAAhf+F/wgAAQACCNIIAQD/AAAA
 3gYAAIX/gQKDBCYAvAYFACYA3QYAAIX/hf8IAAEAAgjSCAEA/wAAAN4GAACF/w==
 </rawitemdata></item>
-<item name='$CIAOOwner' sign='true'><text>CN=Peter Luder/O=WGC/C=CH</text></item>
-<item name='$CIAOTime' sign='true'><datetime dst='true'>20110831T111326,05+02</datetime></item>
-<item name='$CIAOCheckOutTime' sign='true'><datetime dst='true'>20120815T113701,06+02</datetime></item>
-<item name='$CIAOCheckOutComment' sign='true'><text>Design-Refresh von Version Legic</text></item></note>
+<item name='$$$FormScript_O' sign='true'>
+<rawitemdata type='14'>
+AQAAAkxTT0IDABQIZW4AAAQACQAlAAQAAAAoAkwBAAAAAAAArAC4AAAAAAAwAMAAJABEAP//AABg
+AAAAAAAAAAIAAAAEAFgBAAAAAAAAAAAAAAAAAAAAAAAAAABYAVgBAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAABAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAEAAAC4ALgAuAC4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAEABQBMb3R1cyBQcm9kdWN0AAAAVjAuMAAAAAAAAAAAAAAAAAAA
+AAAEAAAAJQAAAAAAAAAoAgAATAEAAAAAAAAAAAAAAQAAAAAAAAABAAAAAAAAAAEAAAAAAAAAAAAA
+AAUAAABXMzJJJQMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAwBQAQAAAADcAA8AJAAkACQARgBPAFIATQBTAEMAUgBJAFAAVABfAE8AAAB4AAMATgBFAFcA
+AACMAAYARABFAEwARQBUAEUAAAAAAKgACgBJAE4ASQBUAEkAQQBMAEkAWgBFAAAAAAD//wkAVABF
+AFIATQBJAE4AQQBUAEUAAAAcAQYATwBCAEoARQBDAFQAAAAAAJQAAAAAAAAA//8GAFMATwBVAFIA
+QwBFAAAAAAD4AAgAQwBPAE4AVABJAE4AVQBFAAAAAAAwAQoAQgBJAE4ARABFAFYARQBOAFQAUwAA
+AAAA//8LAE8AQgBKAEUAQwBUAE4AQQBNAEUAXwAAAP//DwBOAE8AVABFAFMAVQBJAEQATwBDAFUA
+TQBFAE4AVAAAAP//BgAlAEwAUwBYAFUASQAAAAAA//8KAFEAVQBFAFIAWQBDAEwATwBTAEUAAAAA
+AAUALAIAAAAACSpkXQgAAABYAQAAxAAAAAAAAAACAAAAnABIAQAAAAAAAAAAAAAAAAAAAACcAJwA
+AAAAAAAAAAAAAAAAAAAAAAAAAABIAUgBAAAAAAAAAAABAAAAAgAAAAMAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAwABAEgB
+AADgAAYIAAAAABoAAAAgAf//AAAAABAAAAAAAAAA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEFRMp7S5pEL9dAN0BEYa3
+AAAAAAAAAAAAAAAAAAAAAGQAAAAAAAAAAAAAAAAAAAACAKwAAAAQAgAAAAAKAAEA//8AAAMAIAAA
+AAAAmAAJAgAAuAAIAAAAAAAAADQBAAAAAAAAAgAAAPABAAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAIAAgAAAAAAAAAA8AHwAQAAAAAAAAAAAgAAAAAAAAAhAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMAAQAAAgAA
+mAAJAgAAuAADAAEAAAAAAKwAAAABAAAAEwAAADQBAADMAAAAAQAAAAEAAAAAAAAABAApAAAAAAAd
+AAAaCwBbSAFJnADKuACmGgwAR0gBy8wAAABYARoNAB0aEgAdAgAAABEAGAAAAAAA//8BAAMAAwAA
+AAYAxAAIADQBDwAKAAAA2Q==
+</rawitemdata></item></note>
 
