--- a/biz.webgate.notes.mailsignaturemanager/Forms/Signaturprofile.form
+++ b/biz.webgate.notes.mailsignaturemanager/Forms/Signaturprofile.form
@@ -1,14 +1,15 @@
 <?xml version='1.0' encoding='utf-8'?>
 <note default='true' class='form' xmlns='http://www.lotus.com/dxl' version='9.0'
  replicaid='C1257C1E002C398C'>
-<noteinfo noteid='20e' unid='CB2C9F69D65F6F69C12576DD004F3383' sequence='389'>
+<noteinfo noteid='20e' unid='CB2C9F69D65F6F69C12576DD004F3383' sequence='395'>
 <created><datetime>20100305T152505,31+01</datetime></created>
-<modified><datetime>20131109T090304,95+01</datetime></modified>
-<revised><datetime dst='true'>20120815T160140,47+02</datetime></revised>
-<lastaccessed><datetime>20131109T090304,95+01</datetime></lastaccessed>
+<modified><datetime>20131109T095355,87+01</datetime></modified>
+<revised><datetime>20131109T095355,86+01</datetime></revised>
+<lastaccessed><datetime>20131109T095355,87+01</datetime></lastaccessed>
 <addedtofile><datetime>20131109T090304,95+01</datetime></addedtofile></noteinfo>
-<updatedby><name>CN=Marco Baumann/O=WGC/C=CH</name><name>CN=WGHub01/O=WGC/C=CH</name></updatedby>
-<wassignedby><name>CN=WGHub01/O=WGC/C=CH</name></wassignedby>
+<updatedby><name>CN=Marco Baumann/O=WGC/C=CH</name><name>CN=WGHub01/O=WGC/C=CH</name><name
+>CN=Christian Guedemann/O=WGC/C=CH</name></updatedby>
+<wassignedby><name>CN=Christian Guedemann/O=WGC/C=CH</name></wassignedby>
 <item name='SW1_5' summary='false' sign='true'>
 <rawitemdata type='400'>
 AAAAAAAAAAA=
@@ -150,24 +151,6 @@ Option Declare
 '++LotusScript Development Environment:2:5:(Declarations):0:2
 
 <break/></text></item>
-<item name='$$Script_O' sign='true'>
-<rawitemdata type='14'>
-AQAAAkxTT0IDABQIZW4AAAQAAAADAAAAAAAEAKgAAAAAAAAAAAAAAAAAAAAAAP//OABYAP////90
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAEABQBMb3R1cyBQcm9kdWN0AAAAVjAuMAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAwAAAAAAAAAEAAAAqAAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAA
-AAMAAABXMzJJJQMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAwCsAAAAAABEABgAKABHAEwATwBCAEEATABTACkAUwBJAEcATgBBAFQAVQBSAFAAUgBPAEYA
-SQBMAEUAAAAAAIwAAwBOAEUAVwAAAKAABgBEAEUATABFAFQARQAAAAAA//8KAEkATgBJAFQASQBB
-AEwASQBaAEUAAAAAAP//CQBUAEUAUgBNAEkATgBBAFQARQAAAP//BgBPAEIASgBFAEMAVAAAAAAA
-//8AAAAAAAAFAAgAAAAAADR8hM0EAAcAAAAAAB0AAAIAAAARABAAAAAAAP//AQADAAUAAAAHAAoA
-AADn
-</rawitemdata></item>
-<item name='$$ScriptName' summary='false' sign='true'><text>Signaturprofile</text></item>
 <item name='$$FormScript' summary='false' sign='true'><text>'++LotusScript Development Environment:2:5:(Options):0:74
 Option Declare
 
@@ -188,37 +171,6 @@ Sub Postopen(Source As Notesuidocument)
 	
 	
 End Sub<break/></text></item>
-<item name='$$$FormScript_O' sign='true'>
-<rawitemdata type='14'>
-AQAAAkxTT0IDABQIZW4AAAQACQAoAAQAAAAkAqABAAAAAAQAwADMAAAAAAAwABgBJABEAP//AABg
-AAAAAAAAAAIAAAAYAGwBAAAAAAAAAAAAAAAAbAFsAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAGAAYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAEAAADMAMwAzADMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAEABQBMb3R1cyBQcm9kdWN0AAAAVjAuMAAAAAAAAAAAAAAAAAAA
-AAAEAAAAKAAAAAAAAAAkAgAAoAEAAAAAAAAAAAAAAQAAAAAAAAABAAAAAAAAAAEAAAAAAAAAAAAA
-AAUAAABXMzJJJQMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAwCkAQAAAAA0AQ8AJAAkACQARgBPAFIATQBTAEMAUgBJAFAAVABfAE8AAAB4AAMATgBFAFcA
-AACMAAYARABFAEwARQBUAEUAAAAAAFABCgBJAE4ASQBUAEkAQQBMAEkAWgBFAAAAAADMAAkAVABF
-AFIATQBJAE4AQQBUAEUAAAB0AQYATwBCAEoARQBDAFQAAAAAAJQAAAAAAAAABAEYACgARwBMAE8A
-QgBBAEwAUwApAFMASQBHAE4AQQBUAFUAUgBQAFIATwBGAEkATABFAAAAAAD//xgAKABHAGwAbwBi
-AGEAbABzACkAUwBpAGcAbgBhAHQAdQByAHAAcgBvAGYAaQBsAGUAAAAAAP//BgBTAE8AVQBSAEMA
-RQAAAAAA//8KAEIASQBOAEQARQBWAEUATgBUAFMAAAAAAP//CwBPAEIASgBFAEMAVABOAEEATQBF
-AF8AAACIAQ8ATgBPAFQARQBTAFUASQBEAE8AQwBVAE0ARQBOAFQAAAD//wYAJQBMAFMAWABVAEkA
-AAAAAP//CABQAE8AUwBUAE8AUABFAE4AAAAAAAUAKAIAAAAAsJQ1tBgAAAAAAJgAyDo2BQAAAAAA
-AAAACAAAAGwBAAAcAQAAAAAAAAIAAACwAFwBAAAAAAAAAAAAAAAAAAAAALAAsAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAFwBXAEAAAAAAAAAAAEAAAACAAAABgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADAAEAXAEAADgBBggAAAAA
-GgAAAHgB//8AAAAAEAAAAAAAAABUAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQVEyntLmkQv10A3QERhrcAAAAAAAAAAAAA
-AAAAAAAAZAAAAAAAAAAAAAAAAAAAAAIAwAAAABQCAAAAAAoAAQD//wAAAwAgAAAAAAAIAQkCAADM
-AAgAAAAAAAAAjAEAAAAAAAABAAAABAIEAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAEAgQCAAAAAAAAAAABAAAAAAAAACQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAwABAAAAAAAIAQkCAADMABMA
-AACMAQAAywAAAAAAAAAEACwAAAAAANLQAB0AABoMAFtcAUmwAMrMAKYaDQBHXAHLywAAAGwBGg4A
-HRoUAB0CAAAAEQAYAAAAAAD//wEAAwAEAAAABwAcAQkAjAEQAAoAAAA=
-</rawitemdata></item>
 <item name='DocumentTitle' placeholder='true'>
 <rawitemdata type='0'>
 </rawitemdata></item>
@@ -461,6 +413,72 @@ AAAAAAAAAAA=
 >NotFound</text><text>DocAuthorsAdd</text><text>DocAuthors</text><text>DocReadersAdd</text><text
 >DocReaders</text><text>Subject</text><text>Form</text><text>pushed</text><text
 >DocumentSubject</text><text>DocType</text><text>DocumentTitle</text></textlist></item>
+<item name='$V5ACTIONS' sign='true'>
+<rawitemdata type='1'>
+vRwBAAAAAQABAAAAJQAAAAAAAAABAAoJCAACAHn/bAABAP///wABAAAAAAABAAAAgAABAP///wAA
+AB8AAwAAAAAAAAADAAAAAAAAAAAAAAAAAAAAP0ACAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAHH/MgAAAAAAAwATABAAAAAAAAAAAAAAAAAAAAAAAAAAAAB2
+aWV3R3JhZGllbnQuZ2lm/P86AAAAAAABAAAAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AQCwwNAAAAAAAAAAAAAAAL7/SgAAAAEABQCOAAEACgAAAAkAAABiZWFyYmVpdGVuKgAAABwAAgDo
+BwAAAAAAAAAAAAAAAAAA8D/tAgMABwAMAAUACTBTMEUAXv8yAAAAAAAAAAAAFgAAAAAAAAAAAAAA
+AAAAABYAAAAUAAEACgBCZWFyYmVpdGVuAwBf/xAAAgAMAAcAAAAAAAAAX/8QAAIAAQAHAAAAAAAA
+AF//EAACAAIABwAAAAAAAABf/xAAAgALAAcAAAAAAAAAX/8QAAIAFAAHAAAAAAAAAF//EAACAAkA
+BwAAAAAAAABf/xAAAgAIAAcAAAAAAAAAX/8QAAIACgAHAAAAAAAAAF//EAACAAMABwAAAAAAAABf
+/xAAAgAGAAcAAAAAAAAAX/8QAAIABwAHAAAAAAAAAF//EAACAAUABwAAAAAAAABf/xAAAgAEAAcA
+AAAAAAAAvv9AAAAAAQB1AJIBAQAJAAAADAAAAHNwZWljaGVybgcgAAAAEgACAMYLAAAAAAAA7QED
+AAcADAAFAAkwUzBFAF7/MgAAAAAAAAAAABYAAAAAAAAAAAAAAAAAAAAWAAAAFAABAAkAU3BlaWNo
+ZXJuAAMAX/8QAAIADAAHAAAAAAAAAF//EAACAAEABwAAAAAAAABf/xAAAgACAAcAAAAAAAAAX/8Q
+AAIACwAHAAAAAAAAAF//EAACABQABwAAAAAAAABf/xAAAgAJAAcAAAAAAAAAX/8QAAIACAAHAAAA
+AAAAAF//EAACAAoABwAAAAAAAABf/xAAAgADAAcAAAAAAAAAX/8QAAIABgAHAAAAAAAAAF//EAAC
+AAcABwAAAAAAAABf/xAAAgAFAAcAAAAAAAAAX/8QAAIABAAHAAAAAAAAAL7/dAAAAAEAFQCSAQEA
+FgAAAA0AAABzcGVpY2hlcm4gJiBzY2hsaWVzc2VuSAAAADIAAgDGCwAAAAAAAO0BrwAeABIAAgD8
+EQAAAAAAAO0BrgAMAAEAAACuAAQAtQMDAAcAFAANAAkxUzJTN1MxMVMxMlMAXv8+AAAAAAAAAAAA
+IgAAAAAAAAAAAAAAAAAAACIAAAAgAAEAFgBTcGVpY2hlcm4gJiBTY2hsaWVzc2VuAwBf/xAAAgAM
+AAcAAAAAAAAAX/8QAAIAAQAHAAAAAAAAAF//EAACAAIABwAAAAAAAABf/xAAAgALAAcAAAAAAAAA
+X/8QAAIAFAAHAAAAAAAAAF//EAACAAkABwAAAAAAAABf/xAAAgAIAAcAAAAAAAAAX/8QAAIACgAH
+AAAAAAAAAF//EAACAAMABwAAAAAAAABf/xAAAgAGAAcAAAAAAAAAX/8QAAIABwAHAAAAAAAAAF//
+EAACAAUABwAAAAAAAABf/xAAAgAEAAcAAAAAAAAAvv9QAAAAAQAlABIBAQAFAAoACgAAAGxlc2Vu
+3SoAAAAcAAIA6AcAAAAAAAAAAAAAAAAAAAAA7QIDAAcADAAFAAkwUzBFAAoAAAAIAIkAAwBe/y4A
+AAAAAAAAAAASAAAAAAAAAAAAAAAAAAAAEgAAABAAAQAFAExlc2VuAAMAX/8QAAIADAAHAAAAAAAA
+AF//EAACAAEABwAAAAAAAABf/xAAAgACAAcAAAAAAAAAX/8QAAIACwAHAAAAAAAAAF//EAACABQA
+BwAAAAAAAABf/xAAAgAJAAcAAAAAAAAAX/8QAAIACAAHAAAAAAAAAF//EAACAAoABwAAAAAAAABf
+/xAAAgADAAcAAAAAAAAAX/8QAAIABgAHAAAAAAAAAF//EAACAAcABwAAAAAAAABf/xAAAgAFAAcA
+AAAAAAAAX/8QAAIABAAHAAAAAAAAAL7/QAAAAAEAGwCeAQEACgAAAAsAAABzY2hsaWVzc2VuIAAA
+ABIAAgD8EQAAAAAAAO0BAwAHAAwABQAJMFMwRQBe/zIAAAAAAAAAAAAWAAAAAAAAAAAAAAAAAAAA
+FgAAABQAAQAKAFNjaGxpZXNzZW4DAF//EAACAAwABwAAAAAAAABf/xAAAgABAAcAAAAAAAAAX/8Q
+AAIAAgAHAAAAAAAAAF//EAACAAsABwAAAAAAAABf/xAAAgAUAAcAAAAAAAAAX/8QAAIACQAHAAAA
+AAAAAF//EAACAAgABwAAAAAAAABf/xAAAgAKAAcAAAAAAAAAX/8QAAIAAwAHAAAAAAAAAF//EAAC
+AAYABwAAAAAAAABf/xAAAgAHAAcAAAAAAAAAX/8QAAIABQAHAAAAAAAAAF//EAACAAQABwAAAAAA
+AAC+/34BAAABAAoAHgEAAAoAJgAAAAAAQWt0aXZpZXJlbjgBCAAoAOMArwAeABIAAgDGCwAAAAAA
+AO0BrgAMAAEAAACuAAQAtQMDAAcAEAAJAAkzUzRTOFM5UwABABwACQBfQWN0aW9uSUQAAQAGAFNJ
+R0FLVAMABwAMAAUACTBSMVMAAQAcAAcAX1NDSEVNQQAFAAgAZmRTY2hlbWEDAAcACgADAAkwUgAI
+ACgAAQANAFdHQ1NNQWN0aW9uSWQABQAJAF9BY3Rpb25JRAB8AgMABwAKAAMACTBSAAgAJAABAAsA
+V0dDU01TY2hlbWEABQAHAF9TY2hlbWEAfAIDAAcADgAHAAkwUjJTNVMACAAkAAIAog8AAAAAAAAB
+AA4AYWFVSVZpZXdBY3Rpb27tAgMABwAMAAUACTBSNFMAAAASAAIA/BEAAAAAAADtAQMABwAKAAMA
+CTBSACYAAAAYAAUABgBTdGF0dXMBAAEAMAAKAgMABwAMAAUACTFTMlMAvv+CAQAAAQALAB4BAAAM
+ACYAAAAAAERlYWt0aXZpZXJlbjoBCAAoAOMArwAeABIAAgDGCwAAAAAAAO0BrgAMAAEAAACuAAQA
+tQMDAAcAEAAJAAkzUzRTOFM5UwABAB4ACQBfQWN0aW9uSUQAAQAIAFNJR0RFQUtUAwAHAAwABQAJ
+MFIxUwABABwABwBfU0NIRU1BAAUACABmZFNjaGVtYQMABwAKAAMACTBSAAgAKAABAA0AV0dDU01B
+Y3Rpb25JZAAFAAkAX0FjdGlvbklEAHwCAwAHAAoAAwAJMFIACAAkAAEACwBXR0NTTVNjaGVtYQAF
+AAcAX1NjaGVtYQB8AgMABwAOAAcACTBSMlM1UwAIACQAAgCiDwAAAAAAAAEADgBhYVVJVmlld0Fj
+dGlvbu0CAwAHAAwABQAJMFI0UwAAABIAAgD8EQAAAAAAAO0BAwAHAAoAAwAJMFIAJgAAABgABQAG
+AFN0YXR1cwEAAQAxAAoCAwAHAAwABQAJMVMyUwC+/6YBAAABACYAHgEAABMAQgAAAAAAU2lnbmF0
+dXIggWJlcnRyYWdlbgA6AQgAKADjAK8AHgASAAIAxgsAAAAAAADtAa4ADAABAAAArgAEALUDAwAH
+ABAACQAJM1M0UzhTOVMAAQAeAAkAX0FjdGlvbklEAAEABwBQVVNIU0lHAAMABwAMAAUACTBSMVMA
+AQAcAAcAX1NDSEVNQQAFAAgAZmRTY2hlbWEDAAcACgADAAkwUgAIACgAAQANAFdHQ1NNQWN0aW9u
+SWQABQAJAF9BY3Rpb25JRAB8AgMABwAKAAMACTBSAAgAJAABAAsAV0dDU01TY2hlbWEABQAHAF9T
+Y2hlbWEAfAIDAAcADgAHAAkwUjJTNVMACAAkAAIAog8AAAAAAAABAA4AYWFVSVZpZXdBY3Rpb27t
+AgMABwAMAAUACTBSNFMAAAASAAIA/BEAAAAAAADtAQMABwAKAAMACTBSAEIAAAAsAAUABgBTdGF0
+dXMBAAEAMQAKAgUABgBwdXNoZWQBAAEAMQALAhwCAwAHABQADQAJMVMyUzNTNFM1UzZTAL7/kgAA
+AAEAIAAeAQAAGwAmAAAAAABLYWxlbmRlcnByb2ZpbCB6dXKBY2tzZXR6ZW4AOgAAAC4AAgCiDwAA
+AAAAAAEAGABhYVVJUmVzZXRDYWxlbmRhclByb2ZpbGXtAgMABwAKAAMACTRTACYAAAAYAAUABgBT
+dGF0dXMBAAEAMAAKAgMABwAMAAUACTFTMlMA
+</rawitemdata></item>
+<item name='$CIAOOwner' sign='true'><text>CN=Peter Luder/O=WGC/C=CH</text></item>
+<item name='$CIAOTime' sign='true'><datetime>20111206T122128,78+01</datetime></item>
+<item name='$CIAOCheckOutTime' sign='true'><datetime dst='true'>20120815T113700,73+02</datetime></item>
+<item name='$CIAOCheckOutComment' sign='true'><text>Design-Refresh von Version Legic</text></item>
+<item name='$$ScriptName' summary='false' sign='true'><text>Signaturprofile</text></item>
 <item name='$Body' sign='true'>
 <rawitemdata type='1'>
 gQKC/1oAAQAAAAAAAAAAAKAFAACgBQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
@@ -1020,69 +1038,52 @@ AQAAAAAUhAAAAAAAAAkAAABkAAEAAAAEAAAAgwRKAIX/CAABAAAIgQKC/1oASwAAAAAAAAAAAKAF
 AACgBQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAAABSEoAUA
 AKAFCQAAAGQAAQAAAAQAAACDBEsAhf8IAAEAAAg=
 </rawitemdata></item>
-<item name='$V5ACTIONS' sign='true'>
-<rawitemdata type='1'>
-vRwBAAAAAQABAAAAJQAAAAAAAAABAAoJCAACAHn/bAABAP///wABAAAAAAABAAAAgAABAP///wAA
-AB8AAwAAAAAAAAADAAAAAAAAAAAAAAAAAAAAP0ACAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAAAAAAAAAAAAAAAAAAAHH/MgAAAAAAAwATABAAAAAAAAAAAAAAAAAAAAAAAAAAAAB2
-aWV3R3JhZGllbnQuZ2lm/P86AAAAAAABAAAAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AQCwwNAAAAAAAAAAAAAAAL7/SgAAAAEABQCOAAEACgAAAAkAAABiZWFyYmVpdGVuKgAAABwAAgDo
-BwAAAAAAAAAAAAAAAAAA8D/tAgMABwAMAAUACTBTMEUAXv8yAAAAAAAAAAAAFgAAAAAAAAAAAAAA
-AAAAABYAAAAUAAEACgBCZWFyYmVpdGVuAwBf/xAAAgAMAAcAAAAAAAAAX/8QAAIAAQAHAAAAAAAA
-AF//EAACAAIABwAAAAAAAABf/xAAAgALAAcAAAAAAAAAX/8QAAIAFAAHAAAAAAAAAF//EAACAAkA
-BwAAAAAAAABf/xAAAgAIAAcAAAAAAAAAX/8QAAIACgAHAAAAAAAAAF//EAACAAMABwAAAAAAAABf
-/xAAAgAGAAcAAAAAAAAAX/8QAAIABwAHAAAAAAAAAF//EAACAAUABwAAAAAAAABf/xAAAgAEAAcA
-AAAAAAAAvv9AAAAAAQB1AJIBAQAJAAAADAAAAHNwZWljaGVybgcgAAAAEgACAMYLAAAAAAAA7QED
-AAcADAAFAAkwUzBFAF7/MgAAAAAAAAAAABYAAAAAAAAAAAAAAAAAAAAWAAAAFAABAAkAU3BlaWNo
-ZXJuAAMAX/8QAAIADAAHAAAAAAAAAF//EAACAAEABwAAAAAAAABf/xAAAgACAAcAAAAAAAAAX/8Q
-AAIACwAHAAAAAAAAAF//EAACABQABwAAAAAAAABf/xAAAgAJAAcAAAAAAAAAX/8QAAIACAAHAAAA
-AAAAAF//EAACAAoABwAAAAAAAABf/xAAAgADAAcAAAAAAAAAX/8QAAIABgAHAAAAAAAAAF//EAAC
-AAcABwAAAAAAAABf/xAAAgAFAAcAAAAAAAAAX/8QAAIABAAHAAAAAAAAAL7/dAAAAAEAFQCSAQEA
-FgAAAA0AAABzcGVpY2hlcm4gJiBzY2hsaWVzc2VuSAAAADIAAgDGCwAAAAAAAO0BrwAeABIAAgD8
-EQAAAAAAAO0BrgAMAAEAAACuAAQAtQMDAAcAFAANAAkxUzJTN1MxMVMxMlMAXv8+AAAAAAAAAAAA
-IgAAAAAAAAAAAAAAAAAAACIAAAAgAAEAFgBTcGVpY2hlcm4gJiBTY2hsaWVzc2VuAwBf/xAAAgAM
-AAcAAAAAAAAAX/8QAAIAAQAHAAAAAAAAAF//EAACAAIABwAAAAAAAABf/xAAAgALAAcAAAAAAAAA
-X/8QAAIAFAAHAAAAAAAAAF//EAACAAkABwAAAAAAAABf/xAAAgAIAAcAAAAAAAAAX/8QAAIACgAH
-AAAAAAAAAF//EAACAAMABwAAAAAAAABf/xAAAgAGAAcAAAAAAAAAX/8QAAIABwAHAAAAAAAAAF//
-EAACAAUABwAAAAAAAABf/xAAAgAEAAcAAAAAAAAAvv9QAAAAAQAlABIBAQAFAAoACgAAAGxlc2Vu
-3SoAAAAcAAIA6AcAAAAAAAAAAAAAAAAAAAAA7QIDAAcADAAFAAkwUzBFAAoAAAAIAIkAAwBe/y4A
-AAAAAAAAAAASAAAAAAAAAAAAAAAAAAAAEgAAABAAAQAFAExlc2VuAAMAX/8QAAIADAAHAAAAAAAA
-AF//EAACAAEABwAAAAAAAABf/xAAAgACAAcAAAAAAAAAX/8QAAIACwAHAAAAAAAAAF//EAACABQA
-BwAAAAAAAABf/xAAAgAJAAcAAAAAAAAAX/8QAAIACAAHAAAAAAAAAF//EAACAAoABwAAAAAAAABf
-/xAAAgADAAcAAAAAAAAAX/8QAAIABgAHAAAAAAAAAF//EAACAAcABwAAAAAAAABf/xAAAgAFAAcA
-AAAAAAAAX/8QAAIABAAHAAAAAAAAAL7/QAAAAAEAGwCeAQEACgAAAAsAAABzY2hsaWVzc2VuIAAA
-ABIAAgD8EQAAAAAAAO0BAwAHAAwABQAJMFMwRQBe/zIAAAAAAAAAAAAWAAAAAAAAAAAAAAAAAAAA
-FgAAABQAAQAKAFNjaGxpZXNzZW4DAF//EAACAAwABwAAAAAAAABf/xAAAgABAAcAAAAAAAAAX/8Q
-AAIAAgAHAAAAAAAAAF//EAACAAsABwAAAAAAAABf/xAAAgAUAAcAAAAAAAAAX/8QAAIACQAHAAAA
-AAAAAF//EAACAAgABwAAAAAAAABf/xAAAgAKAAcAAAAAAAAAX/8QAAIAAwAHAAAAAAAAAF//EAAC
-AAYABwAAAAAAAABf/xAAAgAHAAcAAAAAAAAAX/8QAAIABQAHAAAAAAAAAF//EAACAAQABwAAAAAA
-AAC+/34BAAABAAoAHgEAAAoAJgAAAAAAQWt0aXZpZXJlbjgBCAAoAOMArwAeABIAAgDGCwAAAAAA
-AO0BrgAMAAEAAACuAAQAtQMDAAcAEAAJAAkzUzRTOFM5UwABABwACQBfQWN0aW9uSUQAAQAGAFNJ
-R0FLVAMABwAMAAUACTBSMVMAAQAcAAcAX1NDSEVNQQAFAAgAZmRTY2hlbWEDAAcACgADAAkwUgAI
-ACgAAQANAFdHQ1NNQWN0aW9uSWQABQAJAF9BY3Rpb25JRAB8AgMABwAKAAMACTBSAAgAJAABAAsA
-V0dDU01TY2hlbWEABQAHAF9TY2hlbWEAfAIDAAcADgAHAAkwUjJTNVMACAAkAAIAog8AAAAAAAAB
-AA4AYWFVSVZpZXdBY3Rpb27tAgMABwAMAAUACTBSNFMAAAASAAIA/BEAAAAAAADtAQMABwAKAAMA
-CTBSACYAAAAYAAUABgBTdGF0dXMBAAEAMAAKAgMABwAMAAUACTFTMlMAvv+CAQAAAQALAB4BAAAM
-ACYAAAAAAERlYWt0aXZpZXJlbjoBCAAoAOMArwAeABIAAgDGCwAAAAAAAO0BrgAMAAEAAACuAAQA
-tQMDAAcAEAAJAAkzUzRTOFM5UwABAB4ACQBfQWN0aW9uSUQAAQAIAFNJR0RFQUtUAwAHAAwABQAJ
-MFIxUwABABwABwBfU0NIRU1BAAUACABmZFNjaGVtYQMABwAKAAMACTBSAAgAKAABAA0AV0dDU01B
-Y3Rpb25JZAAFAAkAX0FjdGlvbklEAHwCAwAHAAoAAwAJMFIACAAkAAEACwBXR0NTTVNjaGVtYQAF
-AAcAX1NjaGVtYQB8AgMABwAOAAcACTBSMlM1UwAIACQAAgCiDwAAAAAAAAEADgBhYVVJVmlld0Fj
-dGlvbu0CAwAHAAwABQAJMFI0UwAAABIAAgD8EQAAAAAAAO0BAwAHAAoAAwAJMFIAJgAAABgABQAG
-AFN0YXR1cwEAAQAxAAoCAwAHAAwABQAJMVMyUwC+/6YBAAABACYAHgEAABMAQgAAAAAAU2lnbmF0
-dXIggWJlcnRyYWdlbgA6AQgAKADjAK8AHgASAAIAxgsAAAAAAADtAa4ADAABAAAArgAEALUDAwAH
-ABAACQAJM1M0UzhTOVMAAQAeAAkAX0FjdGlvbklEAAEABwBQVVNIU0lHAAMABwAMAAUACTBSMVMA
-AQAcAAcAX1NDSEVNQQAFAAgAZmRTY2hlbWEDAAcACgADAAkwUgAIACgAAQANAFdHQ1NNQWN0aW9u
-SWQABQAJAF9BY3Rpb25JRAB8AgMABwAKAAMACTBSAAgAJAABAAsAV0dDU01TY2hlbWEABQAHAF9T
-Y2hlbWEAfAIDAAcADgAHAAkwUjJTNVMACAAkAAIAog8AAAAAAAABAA4AYWFVSVZpZXdBY3Rpb27t
-AgMABwAMAAUACTBSNFMAAAASAAIA/BEAAAAAAADtAQMABwAKAAMACTBSAEIAAAAsAAUABgBTdGF0
-dXMBAAEAMQAKAgUABgBwdXNoZWQBAAEAMQALAhwCAwAHABQADQAJMVMyUzNTNFM1UzZTAL7/kgAA
-AAEAIAAeAQAAGwAmAAAAAABLYWxlbmRlcnByb2ZpbCB6dXKBY2tzZXR6ZW4AOgAAAC4AAgCiDwAA
-AAAAAAEAGABhYVVJUmVzZXRDYWxlbmRhclByb2ZpbGXtAgMABwAKAAMACTRTACYAAAAYAAUABgBT
-dGF0dXMBAAEAMAAKAgMABwAMAAUACTFTMlMA
+<item name='$$Script_O' sign='true'>
+<rawitemdata type='14'>
+AQAAAkxTT0IDABQIZW4AAAQAAAADAAAAAAAEAKgAAAAAAAAAAAAAAAAAAAAAAP//OABYAP////90
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAEABQBMb3R1cyBQcm9kdWN0AAAAVjAuMAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAwAAAAAAAAAEAAAAqAAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAA
+AAMAAABXMzJJJQMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAwCsAAAAAABEABgAKABHAEwATwBCAEEATABTACkAUwBJAEcATgBBAFQAVQBSAFAAUgBPAEYA
+SQBMAEUAAAAAAIwAAwBOAEUAVwAAAKAABgBEAEUATABFAFQARQAAAAAA//8KAEkATgBJAFQASQBB
+AEwASQBaAEUAAAAAAP//CQBUAEUAUgBNAEkATgBBAFQARQAAAP//BgBPAEIASgBFAEMAVAAAAAAA
+//8AAAAAAAAFAAgAAAAAADR8hM0EAAcAAAAAAB0AAAIAAAARABAAAAAAAP//AQADAAUAAAAHAAoA
+AADn
 </rawitemdata></item>
-<item name='$CIAOOwner' sign='true'><text>CN=Peter Luder/O=WGC/C=CH</text></item>
-<item name='$CIAOTime' sign='true'><datetime>20111206T122128,78+01</datetime></item>
-<item name='$CIAOCheckOutTime' sign='true'><datetime dst='true'>20120815T113700,73+02</datetime></item>
-<item name='$CIAOCheckOutComment' sign='true'><text>Design-Refresh von Version Legic</text></item></note>
+<item name='$$$FormScript_O' sign='true'>
+<rawitemdata type='14'>
+AQAAAkxTT0IDABQIZW4AAAQACQAoAAQAAAAkAqABAAAAAAQAwADMAAAAAAAwABgBJABEAP//AABg
+AAAAAAAAAAIAAAAYAGwBAAAAAAAAAAAAAAAAbAFsAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAGAAYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAEAAADMAMwAzADMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAEABQBMb3R1cyBQcm9kdWN0AAAAVjAuMAAAAAAAAAAAAAAAAAAA
+AAAEAAAAKAAAAAAAAAAkAgAAoAEAAAAAAAAAAAAAAQAAAAAAAAABAAAAAAAAAAEAAAAAAAAAAAAA
+AAUAAABXMzJJJQMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAwCkAQAAAAA0AQ8AJAAkACQARgBPAFIATQBTAEMAUgBJAFAAVABfAE8AAAB4AAMATgBFAFcA
+AACMAAYARABFAEwARQBUAEUAAAAAAFABCgBJAE4ASQBUAEkAQQBMAEkAWgBFAAAAAADMAAkAVABF
+AFIATQBJAE4AQQBUAEUAAAB0AQYATwBCAEoARQBDAFQAAAAAAJQAAAAAAAAABAEYACgARwBMAE8A
+QgBBAEwAUwApAFMASQBHAE4AQQBUAFUAUgBQAFIATwBGAEkATABFAAAAAAD//xgAKABHAGwAbwBi
+AGEAbABzACkAUwBpAGcAbgBhAHQAdQByAHAAcgBvAGYAaQBsAGUAAAAAAP//BgBTAE8AVQBSAEMA
+RQAAAAAA//8KAEIASQBOAEQARQBWAEUATgBUAFMAAAAAAP//CwBPAEIASgBFAEMAVABOAEEATQBF
+AF8AAACIAQ8ATgBPAFQARQBTAFUASQBEAE8AQwBVAE0ARQBOAFQAAAD//wYAJQBMAFMAWABVAEkA
+AAAAAP//CABQAE8AUwBUAE8AUABFAE4AAAAAAAUAKAIAAAAAu2qDkBgAAAAAAJgAqBTQCQAAAAAA
+AAAACAAAAGwBAAAcAQAAAAAAAAIAAACwAFwBAAAAAAAAAAAAAAAAAAAAALAAsAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAFwBXAEAAAAAAAAAAAEAAAACAAAABgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADAAEAXAEAADgBBggAAAAA
+GgAAAHgB//8AAAAAEAAAAAAAAABUAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQVEyntLmkQv10A3QERhrcAAAAAAAAAAAAA
+AAAAAAAAZAAAAAAAAAAAAAAAAAAAAAIAwAAAABQCAAAAAAoAAQD//wAAAwAgAAAAAAAIAQkCAADM
+AAgAAAAAAAAAjAEAAAAAAAABAAAABAIEAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAEAgQCAAAAAAAAAAABAAAAAAAAACQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAwABAAAAAAAIAQkCAADMABMA
+AACMAQAAywAAAAAAAAAEACwAAAAAANLQAB0AABoMAFtcAUmwAMrMAKYaDQBHXAHLywAAAGwBGg4A
+HRoUAB0CAAAAEQAYAAAAAAD//wEAAwAEAAAABwAcAQkAjAEQAAoAAAA=
+</rawitemdata></item></note>
 
