--- a/biz.webgate.notes.mailsignaturemanager/Pages/pgFS8Nav.page
+++ b/biz.webgate.notes.mailsignaturemanager/Pages/pgFS8Nav.page
@@ -1,17 +1,20 @@
 <?xml version='1.0' encoding='utf-8'?>
 <note class='form' xmlns='http://www.lotus.com/dxl' version='9.0' replicaid='C1257C1E002C398C'>
-<noteinfo noteid='2a2' unid='F293FA71B615B60AC12577E3006BB119' sequence='97'>
+<noteinfo noteid='2a2' unid='F293FA71B615B60AC12577E3006BB119' sequence='105'>
 <created><datetime>20101122T203616,89+01</datetime></created>
-<modified><datetime>20131109T090305,91+01</datetime></modified>
-<revised><datetime dst='true'>20120815T160140,87+02</datetime></revised>
-<lastaccessed><datetime>20131109T090305,91+01</datetime></lastaccessed>
+<modified><datetime>20131109T110913,67+01</datetime></modified>
+<revised><datetime>20131109T110913,66+01</datetime></revised>
+<lastaccessed><datetime>20131109T110913,67+01</datetime></lastaccessed>
 <addedtofile><datetime>20131109T090305,91+01</datetime></addedtofile></noteinfo>
-<updatedby><name>CN=notes/O=iic</name><name>CN=Marco Baumann/O=WGC/C=CH</name><name
->CN=WGHub01/O=WGC/C=CH</name></updatedby>
-<wassignedby><name>CN=WGHub01/O=WGC/C=CH</name></wassignedby>
+<updatedby><name>CN=Christian Guedemann/O=WGC/C=CH</name></updatedby>
+<wassignedby><name>CN=Christian Guedemann/O=WGC/C=CH</name></wassignedby>
 <item name='OriginalModTime' sign='true'><datetime>20070224T135202,47+01</datetime></item>
-<item name='$BackgroundRepeat' sign='true'><text>3</text></item>
-<item name='$BackgroundR5' sign='true'>
+<item name='$CIAOOwner' sign='true'><text>CN=Peter Luder/O=WGC/C=CH</text></item>
+<item name='$CIAOTime' sign='true'><datetime dst='true'>20110831T111325,59+02</datetime></item>
+<item name='$CIAOCheckOutTime' sign='true'><datetime dst='true'>20120815T113700,78+02</datetime></item>
+<item name='$CIAOCheckOutComment' sign='true'><text>Design-Refresh von Version Legic</text></item>
+<item name='$BackgroundRepeat'><text>3</text></item>
+<item name='$BackgroundR5'>
 <rawitemdata type='1'>
 3QYBAJkAmQAcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAH0AHAAAAAEAEgA5AAAAAAAAAAAAAAAA
 AAAAAAD2/ywAAAAAAAMAEwAKAAAAAAAAAAAAAAAAAAAAAAAAAAAAbmQ4cHNoLmdpZt4GAQCZAA==
@@ -26,12 +29,12 @@ X/8QAAIADwAHAAAAAAAAAA==
 hhgLAIAAAAAAAAAA2AABALDA0AASAAAA
 </rawitemdata></item>
 <item name='$Flags'><text>C34WQ</text></item>
-<item name='$DesignerVersion' sign='true'><text>8.5.2</text></item>
+<item name='$DesignerVersion'><text>8.5.3</text></item>
 <item name='$$ScriptName' summary='false' sign='true'><text>pgFS8Nav</text></item>
 <item name='$Body' sign='true'>
 <rawitemdata type='1'>
 gQKC/1oAAQAAAAAAAAAAAKAFAACgBQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-AAAAAAAAAAAJAAAAAJSHAAAAAAAAAAAAAAAAAQAAAAQAAAC7/yAAAQAYAKJoo2MUABIAAAAQAAAA
+AAAAAAAAAAAJAAAAAJSHAAAAAAAAAAAAAAAAAQAAAAQAAAC7/yAAAQBEAAXQ22r0CBIAAAAQAAAA
 AAAAAAAA8D8DAIMEAQCF/wgAAQAABIECgv9aAAIAAAAAAAAAAAA4BAAAOAQAAAAAAAAAAAAAAAAA
 AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAAAUhDgEAAA4BAAAAABkAAEAAAAEAAAA
 gwQCAN0GAQD7//v/LABBAAAAAQIBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAXP8+
@@ -42,7 +45,7 @@ AAAAAAAAAAAAAAEAAAAGAAAAgwQDAIX/CAABAAAH3QYBAJkAmQAcAAAAAAAAAAAAAAAAAAAAAAAA
 AAAAAQAAAH0AHAAAAAEABQAaAAAAAAAAAAAAAAAAAAAAAAD2/zgAAAAAAAMAEwAWAAAAAAAAAAAA
 AAAAAAAAAAAAAAAAd2ViZ2F0ZV9ORDhfYmxhbmsyLmdpZt4GAQCZAIX/CAABAAAHeP83AAAAAAAD
 ABMAFQAAAAAAAAAAAAAAAAAAAAAAAAAAAHdlYmdhdGVfTkQ4X2hkcjAxLmdpZgDu/woAAQAAAAAA
-pBIAAUwOrzKAcAACAAABAQAAgQKC/1oABAAAAAAAAAAAAEwOrzJMDgAAAAAAAAAAAAAAAAAAAAAA
+pBIAAUwOBTeAcAACAAABAQAAgQKC/1oABAAAAAAAAAAAAEwOBTdMDgAAAAAAAAAAAAAAAAAAAAAA
 AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIYBAAAAAFWHAAAAAAAAAAAAAAAAAQAAAAYAAACDBAQA
 hf8IAAEAAAR4/zcAAAAAAAMAEwAVAAAAAAAAAAAAAAAAAAAAAAAAAAAAd2ViZ2F0ZV9ORDhfaGRy
 MDIuZ2lmAO7/CgADAAAAAAClBgAAAACBAoL/WgAFAAAAAAAAAAAAoAUAAKAFAAAAAAAAAAAAAAAA
@@ -137,9 +140,10 @@ Qm90c2NoYWZ0AAMAEgAAABAAAQAFAE5ldS4uAAMAvv9SAAAAAQAeAJ4BAAAOAAAAAAAAAE5ldy4u
 XFRlbXBsYXRlLgAAACIAAgDoAwAAAAAAAAEACwBmcm1UZW1wbGF0ZQDtAgMABwAKAAMACTNTAF7/
 LgAAAAAAAAAAABIAAAAAAAAAAAAAAAAAAAASAAAAEAABAAYAU2NoZW1hAwC+/1YAAAABAAAAngEA
 AAwAAAAAAAAAUHJvZHVjdCBJbmZvNAAAACYAAgCiDwAAAAAAAAEADwBhYVVJUHJvZHVjdEluZm8A
-7QIDAAcADAAFAAkwUzBFAF7/fAAAAAAAAAAAAGAAAAAAAAAAAAAAAAAAAABgAAAAUgABAAsAUHJv
-ZHVjdEluZm8AAQAGAElzRGVtb/cCAQAEAERFTU8KAq8AJAAUAAEACgBEZW1vLU1vZHVzrgAQAAEA
-BABJbmZvrgAEALUDAwAHAAwABQAJOFM5UwA=
+7QIDAAcADAAFAAkwUzBFAF7/LAAAAAAAAAAAABAAAAAAAAAAAAAAAAAAAAAQAAAADgABAAQASW5m
+bwMAvv9UAAAAAQAAAJ4BAAANAAAAAAAAAERva3VtZW50YXRpb24AMAAAACIAAQAVAGh0dHA6Ly9i
+aXQubHkvMTdsS2FHSADgAQMABwAMAAUACTBTMEUAXv82AAAAAAAAAAAAGgAAAAAAAAAAAAAAAAAA
+ABoAAAAYAAEADQBEb2t1bWVudGF0aW9uAAMA
 </rawitemdata></item>
 <item name='$ACTIONS' sign='true'>
 <rawitemdata type='1'>
@@ -152,10 +156,7 @@ AAkwUlI0U77/TgAAAAEAHgCeAQAADAAAAAAAAABOZXcuLlxGb290ZXIsAAAAIAACAOgDAAAAAAAA
 AQAKAERpc2NsYWltZXLtAgMABwAKAAMACTNTAL7/UgAAAAEAHgCeAQAADgAAAAAAAABOZXcuLlxU
 ZW1wbGF0ZS4AAAAiAAIA6AMAAAAAAAABAAsAZnJtVGVtcGxhdGUA7QIDAAcACgADAAkzUwC+/1YA
 AAABAAAAngEAAAwAAAAAAAAAUHJvZHVjdCBJbmZvNAAAACYAAgCiDwAAAAAAAAEADwBhYVVJUHJv
-ZHVjdEluZm8A7QIDAAcADAAFAAkwUzBFAA==
-</rawitemdata></item>
-<item name='$CIAOOwner' sign='true'><text>CN=Peter Luder/O=WGC/C=CH</text></item>
-<item name='$CIAOTime' sign='true'><datetime dst='true'>20110831T111325,59+02</datetime></item>
-<item name='$CIAOCheckOutTime' sign='true'><datetime dst='true'>20120815T113700,78+02</datetime></item>
-<item name='$CIAOCheckOutComment' sign='true'><text>Design-Refresh von Version Legic</text></item></note>
+ZHVjdEluZm8A7QIDAAcADAAFAAkwUzBFAL7/VAAAAAEAAACeAQAADQAAAAAAAABEb2t1bWVudGF0
+aW9uADAAAAAiAAEAFQBodHRwOi8vYml0Lmx5LzE3bEthR0gA4AEDAAcADAAFAAkwUzBFAA==
+</rawitemdata></item></note>
 
