--- a/biz.webgate.notes.mailsignaturemanager/Forms/(dlgPreview).form
+++ b/biz.webgate.notes.mailsignaturemanager/Forms/(dlgPreview).form
@@ -1,14 +1,15 @@
 <?xml version='1.0' encoding='utf-8'?>
 <note class='form' xmlns='http://www.lotus.com/dxl' version='9.0' replicaid='C1257C1E002C398C'>
-<noteinfo noteid='32e' unid='2130F2B23621F0B5C12577F90057C2B9' sequence='94'>
+<noteinfo noteid='32e' unid='2130F2B23621F0B5C12577F90057C2B9' sequence='100'>
 <created><datetime>20101214T165834,81+01</datetime></created>
-<modified><datetime>20131109T090306,81+01</datetime></modified>
-<revised><datetime dst='true'>20120815T160141,07+02</datetime></revised>
-<lastaccessed><datetime>20131109T090306,81+01</datetime></lastaccessed>
+<modified><datetime>20131109T095355,61+01</datetime></modified>
+<revised><datetime>20131109T095355,60+01</datetime></revised>
+<lastaccessed><datetime>20131109T095355,61+01</datetime></lastaccessed>
 <addedtofile><datetime>20131109T090306,81+01</datetime></addedtofile></noteinfo>
 <updatedby><name>CN=Marco Baumann/O=WGC/C=CH</name><name>CN=lpiic05p7/O=iic</name><name
->CN=Marco Baumann/O=WGC/C=CH</name><name>CN=WGHub01/O=WGC/C=CH</name></updatedby>
-<wassignedby><name>CN=WGHub01/O=WGC/C=CH</name></wassignedby>
+>CN=Marco Baumann/O=WGC/C=CH</name><name>CN=WGHub01/O=WGC/C=CH</name><name
+>CN=Christian Guedemann/O=WGC/C=CH</name></updatedby>
+<wassignedby><name>CN=Christian Guedemann/O=WGC/C=CH</name></wassignedby>
 <item name='$Comment' sign='true'><text/></item>
 <item name='$HTMLCode' sign='true'>
 <rawitemdata type='1'>
@@ -25,6 +26,10 @@ hhgBAIAAAAAAgAAAAQABAP///wAQAAAA
 <rawitemdata type='0'>
 </rawitemdata></item>
 <item name='$FIELDS'><text>Signatur_Rich</text></item>
+<item name='$CIAOOwner' sign='true'><text>CN=Peter Luder/O=WGC/C=CH</text></item>
+<item name='$CIAOTime' sign='true'><datetime dst='true'>20110831T111326,17+02</datetime></item>
+<item name='$CIAOCheckOutTime' sign='true'><datetime dst='true'>20120815T113701,15+02</datetime></item>
+<item name='$CIAOCheckOutComment' sign='true'><text>Design-Refresh von Version Legic</text></item>
 <item name='$$ScriptName' summary='false' sign='true'><text>dlgPreview</text></item>
 <item name='$Body' sign='true'>
 <rawitemdata type='1'>
@@ -59,9 +64,5 @@ ciBmgXIgUmVsZWFzZSA3LjAueC84LjB4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 AAAAAAAAAAAAAAAAAAIA0QYAAAAAgQKDBAMAhf8IAAEAAArTCAEA////AKUGAAAAAIECgwQBAIX/
 CAABAAAK
-</rawitemdata></item>
-<item name='$CIAOOwner' sign='true'><text>CN=Peter Luder/O=WGC/C=CH</text></item>
-<item name='$CIAOTime' sign='true'><datetime dst='true'>20110831T111326,17+02</datetime></item>
-<item name='$CIAOCheckOutTime' sign='true'><datetime dst='true'>20120815T113701,15+02</datetime></item>
-<item name='$CIAOCheckOutComment' sign='true'><text>Design-Refresh von Version Legic</text></item></note>
+</rawitemdata></item></note>
 
