--- a/biz.webgate.notes.mailsignaturemanager/Forms/Help.form
+++ b/biz.webgate.notes.mailsignaturemanager/Forms/Help.form
@@ -1,13 +1,14 @@
 <?xml version='1.0' encoding='utf-8'?>
 <note class='form' xmlns='http://www.lotus.com/dxl' version='9.0' replicaid='C1257C1E002C398C'>
-<noteinfo noteid='1d6' unid='E8CC3F37642D10BCC12576DD0050C170' sequence='104'>
+<noteinfo noteid='1d6' unid='E8CC3F37642D10BCC12576DD0050C170' sequence='110'>
 <created><datetime>20100305T154204,00+01</datetime></created>
-<modified><datetime>20131109T090304,49+01</datetime></modified>
-<revised><datetime dst='true'>20120815T160140,25+02</datetime></revised>
-<lastaccessed><datetime>20131109T090304,49+01</datetime></lastaccessed>
+<modified><datetime>20131109T095355,73+01</datetime></modified>
+<revised><datetime>20131109T095355,72+01</datetime></revised>
+<lastaccessed><datetime>20131109T095355,73+01</datetime></lastaccessed>
 <addedtofile><datetime>20131109T090304,49+01</datetime></addedtofile></noteinfo>
-<updatedby><name>CN=Marco Baumann/O=WGC/C=CH</name><name>CN=WGHub01/O=WGC/C=CH</name></updatedby>
-<wassignedby><name>CN=WGHub01/O=WGC/C=CH</name></wassignedby>
+<updatedby><name>CN=Marco Baumann/O=WGC/C=CH</name><name>CN=WGHub01/O=WGC/C=CH</name><name
+>CN=Christian Guedemann/O=WGC/C=CH</name></updatedby>
+<wassignedby><name>CN=Christian Guedemann/O=WGC/C=CH</name></wassignedby>
 <item name='$Comment' sign='true'><text/></item>
 <item name='$Fonts'>
 <rawitemdata type='1'>
@@ -24,6 +25,10 @@ hhgBAIAAAAAAgAAAAQABAP///wAQAAAA
 </rawitemdata></item>
 <item name='$Flags'><text>CD</text></item>
 <item name='$DesignerVersion' sign='true'><text>8.5.2</text></item>
+<item name='$CIAOOwner' sign='true'><text>CN=Peter Luder/O=WGC/C=CH</text></item>
+<item name='$CIAOTime' sign='true'><datetime dst='true'>20110831T120815,71+02</datetime></item>
+<item name='$CIAOCheckOutTime' sign='true'><datetime dst='true'>20120815T113700,54+02</datetime></item>
+<item name='$CIAOCheckOutComment' sign='true'><text>Design-Refresh von Version Legic</text></item>
 <item name='$$ScriptName' summary='false' sign='true'><text>dlgHelp</text></item>
 <item name='$Body' sign='true'>
 <rawitemdata type='1'>
@@ -97,9 +102,5 @@ hAAAAAAAAAAAAN4GAACK/4X/CAABAAAK0wgBAPf39wCkEgECaiKhJAAAAAMAAAEBLwCBAoMEBQCF
 /wgAAQAACtMIAQD39/cApBICAKAF1wcAAAADAAABAS8AgQKDBAMAhf8IAAEAAArTCAEA9/f3AKQS
 AgHXB2oiAAAAAwAAAQEvAIECgwQEAIX/CAABAAAK0wgBAPf39wCkEgICaiKhJAAAAAMAAAEBLwCB
 AoMEBQCF/wgAAQAACtMIAQD39/cApQYAAAAAgQKDBAEAhf8IAAEAAAo=
-</rawitemdata></item>
-<item name='$CIAOOwner' sign='true'><text>CN=Peter Luder/O=WGC/C=CH</text></item>
-<item name='$CIAOTime' sign='true'><datetime dst='true'>20110831T120815,71+02</datetime></item>
-<item name='$CIAOCheckOutTime' sign='true'><datetime dst='true'>20120815T113700,54+02</datetime></item>
-<item name='$CIAOCheckOutComment' sign='true'><text>Design-Refresh von Version Legic</text></item></note>
+</rawitemdata></item></note>
 
